fixed button alignment with icons, updated readme

--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -11,8 +11,9 @@
 }
 
 ::slotted(mwc-icon) {
+  vertical-align: top;
   position: relative;
-  top: 7px;
+  top: 5px;
 }
 
 button {
